--- a/main.html
+++ b/main.html
@@ -8,6 +8,20 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<nav>
+		<ul>
+			<li><a href="/html/">Home</a></li>
+			<li><a href="/Music/">About us</a></li>
+			<li><a href="/Song/">Contact us</a></li>
+			
+		</ul>
+	</nav>
+	<h1>random images</h1>
+	<img src="https://picsum.photos/id/123/200/300">
+	<br>
+	<img src="https://picsum.photos/id/124/200/300">
+	<br>
+	<img src="https://picsum.photos/id/125/200/300">
     <script type="text/javascript" src="./script.js">
 </script>
 
