--- a/main.html
+++ b/main.html
@@ -17,11 +17,11 @@
 		</ul>
 	</nav>
 	<h1>random images</h1>
-	<img src="https://picsum.photos/id/123/200/300">
-	<br>
-	<img src="https://picsum.photos/id/124/200/300">
-	<br>
-	<img src="https://picsum.photos/id/125/200/300">
+	<img src="https://picsum.photos/id/123/200/300" alt="logo">
+	
+	<img src="https://picsum.photos/id/124/200/300" alt="algo">
+	
+	<img src="https://picsum.photos/id/125/200/300" alt="logo">
     <script type="text/javascript" src="./script.js">
 </script>
 
