--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 			
 		</ul>
 	</nav>
-	<h1>random images</h1>
+	<h1>3 random images</h1>
 	<img src="https://picsum.photos/id/123/200/300" alt="logo">
 	
 	<img src="https://picsum.photos/id/124/200/300" alt="algo">
